# gavel-tools

./: .bazelrc  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  go.mod
.bcr/: metadata.template.json  source.template.json
.github/ci/: check.sh  fmt.sh  lib.sh  release.sh
.github/workflows/: ci.yml  publish.yaml  release.yml
archtest/: BUILD.bazel  config.go  config_test.go  evaluate_test.go  layer_test.go  sarif.go  sarif_test.go
aspects/: defs.bzl
docs/: README.md  architecture.md  catalog.md  index.md  releasing.md  repository-layout.md  roadmap.md  rules-lint.md  sarif-boundary.md  status.md  tier-model.md  web-project.md
go/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
go/golangci_lint/wrapper/: BUILD.bazel
java/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
java/cpd/wrapper/: BUILD.bazel
java/error_prone/: repositories.bzl
java/error_prone/wrapper/: BUILD.bazel  main.go
java/pmd/wrapper/: BUILD.bazel
java/spotbugs/wrapper/: BUILD.bazel  main.go  main_test.go
lint/: BUILD.bazel  catalog.yaml  catalog_test.go
lint/archtest/: BUILD.bazel  config.go  config_test.go  evaluate.go  evaluate_test.go  layer.go  layer_test.go  sarif.go  sarif_test.go
lint/aspects/: common.bzl  defs.bzl  go.bzl  java.bzl  python.bzl  rust.bzl  typescript.bzl
lint/lang/go/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/go/golangci_lint/: repositories.bzl
lint/lang/go/golangci_lint/packagesdriver/: BUILD.bazel  main.go  main_test.go
lint/lang/go/golangci_lint/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/java/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/java/cpd/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/java/error_prone/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/java/pmd/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/java/spotbugs/: BUILD.bazel
lint/lang/java/spotbugs/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/python/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/python/bandit/: repositories.bzl
lint/lang/python/bandit/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/python/pycompile/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/python/ruff/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/rust/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/rust/clippy/converter/: BUILD.bazel  converter.go  converter_test.go
lint/lang/rust/clippy/converter/cmd/: BUILD.bazel  main.go
lint/lang/typescript/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
lint/lang/typescript/eslint/: BUILD.bazel
lint/lang/typescript/eslint/converter/: BUILD.bazel  converter.go  converter_test.go
lint/lang/typescript/eslint/wrapper/: BUILD.bazel  main.go  main_test.go
lint/sarif/: BUILD.bazel  report.go  report_test.go  sarif.go  sarif_test.go
macros/: BUILD.bazel  web.bzl
python/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
python/bandit/wrapper/: BUILD.bazel
python/pycompile/wrapper/: BUILD.bazel  main.go
python/ruff/wrapper/: BUILD.bazel  main_test.go
rust/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
rust/clippy/converter/: BUILD.bazel  converter_test.go
rust/clippy/converter/cmd/: BUILD.bazel  main.go
tools/archtest/: BUILD.bazel  config_test.go  evaluate.go  evaluate_test.go  layer.go  layer_test.go  sarif_test.go
tools/aspects/: defs.bzl
tools/go/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
tools/go/golangci_lint/wrapper/: BUILD.bazel  main_test.go
tools/java/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
tools/java/cpd/wrapper/: BUILD.bazel  main.go  main_test.go
tools/java/error_prone/wrapper/: BUILD.bazel
tools/java/pmd/: repositories.bzl
tools/java/pmd/wrapper/: BUILD.bazel  main_test.go
tools/java/spotbugs/: repositories.bzl
tools/java/spotbugs/wrapper/: BUILD.bazel
tools/python/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
tools/python/bandit/wrapper/: BUILD.bazel
tools/python/pycompile/wrapper/: BUILD.bazel  main_test.go
tools/python/ruff/: repositories.bzl
tools/python/ruff/wrapper/: BUILD.bazel
tools/rust/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
tools/rust/clippy/converter/: BUILD.bazel  converter.go  converter_test.go
tools/rust/clippy/converter/cmd/: BUILD.bazel  main.go
tools/typescript/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
tools/typescript/eslint/: BUILD.bazel  pnpm-lock.yaml
tools/typescript/eslint/wrapper/: BUILD.bazel  main.go
typescript/archtest/wrapper/: BUILD.bazel  main.go  main_test.go
typescript/eslint/: BUILD.bazel  package.json
typescript/eslint/wrapper/: BUILD.bazel
web/: defs.bzl
