load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gavelcode/gavel-tools
gazelle(name = "gazelle")

exports_files(
    [
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gavel_lint_config",
    srcs = [".golangci.yml"],
    visibility = ["//visibility:public"],
)
