load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "archtest",
    srcs = [
        "config.go",
        "evaluate.go",
        "layer.go",
        "sarif.go",
    ],
    importpath = "github.com/gavelcode/gavel-tools/lint/archtest",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "archtest_test",
    srcs = [
        "config_test.go",
        "evaluate_test.go",
        "layer_test.go",
        "sarif_test.go",
    ],
    deps = [
        ":archtest",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
