load("@gavel_eslint//:defs.bzl", "npm_link_all_packages")
load("@gavel_eslint//lint/lang/typescript/eslint:eslint/package_json.bzl", eslint_bin = "bin")

npm_link_all_packages(name = "node_modules")

eslint_bin.eslint_binary(
    name = "eslint",
    data = [
        ":node_modules/@microsoft/eslint-formatter-sarif",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "pnpm-lock.yaml",
    ],
    visibility = ["//visibility:public"],
)
