load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "wrapper_lib",
    srcs = ["main.go"],
    importpath = "github.com/gavelcode/gavel-tools/tools/python/ruff/wrapper",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "wrapper",
    embed = [":wrapper_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "wrapper_test",
    srcs = ["main_test.go"],
    embed = [":wrapper_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
