load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/gavelcode/gavel-tools/lint/lang/rust/clippy/converter/cmd",
    visibility = ["//visibility:private"],
    deps = ["//lint/lang/rust/clippy/converter"],
)

go_binary(
    name = "converter",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
